--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,14 @@ version = "0.1.0"
 authors = ["Egor Larionov <egor.larionov@gmail.com>"]
 
 [dependencies]
-alga = "0.5"
 nalgebra = "0.14"
-ipopt = { git = "ssh://git@gitlab.com/elrnv/ipopt-rs.git" }
+ipopt = "0.1"
 geometry-derive = { git = "ssh://git@gitlab.com/elrnv/geometry.git" }
 geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io", "unstable"] }
+rayon = "1.0"
+
+[profile.release]
+debug = true
 
 [features]
 unstable = []
