--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ nalgebra = "0.14"
 ipopt = "0.1"
 geometry-derive = { git = "ssh://git@gitlab.com/elrnv/geometry.git" }
 geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io", "unstable"] }
+#geometry = { path = "../rust/geometry", features = ["io", "unstable"] }
 rayon = "1.0"
 
 [profile.release]
