--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ authors = ["Egor Larionov <egor.larionov@gmail.com>"]
 [dependencies]
 rayon = "1.0"
 nalgebra = "0.16"
+hrbf = { git = "ssh://git@gitlab.com/elrnv/dyn-hrbf.git" }
 geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git" }
 spade = "1.5"
