Make reinterpret an explicit dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ ipopt = "0.1"
 geometry-derive = { git = "ssh://git@gitlab.com/elrnv/geometry.git" }
 geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io", "unstable"] }
 rayon = "1.0"
+reinterpret = "0.1"
 
 [profile.release]
 debug = true
