Migrate to hdkrs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git" }
-#softy = { git = "ssh://git@gitlab.com/elrnv/softy.git" }
-softy = { path = "../softy" }
+softy = { git = "ssh://git@gitlab.com/elrnv/softy.git" }
 libc = "*"
+hdkrs = { git = "ssh://git@gitlab.com/elrnv/hdkrs.git" }
 
 [build-dependencies]
 cbindgen = "0.4"
