Update work on caching solvers (WIP)
It remains to make updates work properly and animations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git" }
-softy = { git = "ssh://git@gitlab.com/elrnv/softy.git" }
+softy = { path = "softy" } #{ git = "ssh://git@gitlab.com/elrnv/softy.git" }
 libc = "*"
 hdkrs = { git = "ssh://git@gitlab.com/elrnv/hdkrs.git" }
+lazy_static = "1.1"
 
 [build-dependencies]
-cbindgen = "0.4"
+cbindgen = "0.6"
