Use function pointers for interrupters

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Egor Larionov <egor.larionov@gmail.com>"]
 
 [dependencies]
 nalgebra = "0.16"
-ipopt = "0.1"
+ipopt = { git = "ssh://git@gitlab.com/elrnv/ipopt-rs.git" }
 geometry-derive = { git = "ssh://git@gitlab.com/elrnv/geometry.git" }
 geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io", "unstable"] }
 rayon = "1.0"
