Refactor energy hessian computation
This commit makes it more managable to reason about how the Hessian is
computed.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ ipopt = { git = "ssh://git@gitlab.com/elrnv/ipopt-rs.git" }
 geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io", "unstable"] }
 rayon = "1.0"
 reinterpret = "0.1"
+#unroll = { git = "ssh://git@gitlab.com/elrnv/unroll.git" }
 
 [dev-dependencies]
 criterion = { version = "0.2", features=['real_blackbox'] }
