--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ authors = ["Egor Larionov <egor.larionov@gmail.com>"]
 rayon = "1.0"
 nalgebra = "0.16"
 hrbf = { git = "ssh://git@gitlab.com/elrnv/dyn-hrbf.git" }
-geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git" }
+geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io"] }
 spade = "1.5"
+
+[dev-dependencies]
+approx = "0.3"
