--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ nalgebra = "0.16"
 hrbf = { git = "ssh://git@gitlab.com/elrnv/dyn-hrbf.git" }
 geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io"] }
 spade = "1.5"
+autodiff = "0.1"
 
 [dev-dependencies]
 approx = "0.3"
