--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "implicits"
 version = "0.1.0"
 authors = ["Egor Larionov <egor.larionov@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 rayon = "1.0"
