--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -10,15 +10,12 @@ ipopt = { git = "ssh://git@gitlab.com/elrnv/ipopt-rs.git" }
 geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io", "unstable"] }
 rayon = "1.0"
 reinterpret = "0.1"
-implicits = { path = "../../implicits-hdk/implicits" } #git = "ssh://git@gitlab.com/elrnv/implicits.git" }
+implicits = { path = "../implicits" }
 #unroll = { git = "ssh://git@gitlab.com/elrnv/unroll.git" }
 
 [dev-dependencies]
 criterion = { version = "0.2", features=['real_blackbox'] }
 approx = "0.3"
-
-[profile.release]
-debug = false # Change this to true to enable debug symbols in release mode
 
 [features]
 unstable = []
