Move profile manifest to root package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ members = [
     "implicits-hdk",
     "vtkio-hdk",
 ]
+
+[profile.release]
+debug = false # Change this to true to enable debug symbols in release mode
