Add num-traits to Cargo.toml

--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -13,6 +13,7 @@ reinterpret = "0.1"
 implicits = { path = "../implicits" }
 #unroll = { git = "ssh://git@gitlab.com/elrnv/unroll.git" }
 approx = "0.3"
+num-traits = "0.2"
 
 [dev-dependencies]
 criterion = { version = "0.2", features=['real_blackbox'] }
