Refactors and updates
- Update for rust 2018 and make it work with stable.
- Add a ball bounce test, which found a few bugs.
- Fix the bug with bounce test.

--- a/implicits-hdk/Cargo.toml
+++ b/implicits-hdk/Cargo.toml
@@ -1,9 +1,8 @@
-cargo-features = ["rename-dependency"]
-
 [package]
 name = "implicits-hdk"
 version = "0.1.0"
 authors = ["Egor Larionov <egor.larionov@gmail.com>"]
+edition = "2018"
 
 [lib]
 name = "implicitshdk"
