--- a/softy-hdk/Cargo.toml
+++ b/softy-hdk/Cargo.toml
@@ -2,6 +2,7 @@
 name = "softy-hdk"
 version = "0.1.0"
 authors = ["Egor Larionov <egor.larionov@gmail.com>"]
+edition = "2018"
 
 [lib]
 name = "softyhdk"
