--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 nalgebra = "0.16"
 ipopt = { git = "ssh://git@gitlab.com/elrnv/ipopt-rs.git" }
-geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io", "unstable"] }
+geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io"] }
 rayon = "1.0"
 reinterpret = "0.1"
 implicits = { path = "../implicits" }
@@ -16,10 +16,11 @@ approx = "0.3"
 num-traits = "0.2"
 
 [dev-dependencies]
-criterion = { version = "0.2", features=['real_blackbox'] }
+criterion = { version = "0.2" }
+utils = { path = "../utils" }
 
 [features]
-unstable = []
+unstable = ["criterion/real_blackbox"]
 
 [[bench]]
 name = "step_performance"
