--- a/hdkrs/Cargo.toml
+++ b/hdkrs/Cargo.toml
@@ -2,6 +2,7 @@
 name = "hdkrs"
 version = "0.1.0"
 authors = ["Egor Larionov <egor.larionov@gmail.com>"]
+edition = "2018"
 
 #[lib]
 #name = "hdkrs"
