Update to implicits-c; refactor interface

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "hdkrs",
     "softy",
     "implicits",
+    "implicits-c",
     "softy-hdk",
     "implicits-hdk",
     "vtkio-hdk",
