--- a/implicits-c/Cargo.toml
+++ b/implicits-c/Cargo.toml
@@ -4,4 +4,14 @@ version = "0.1.0"
 authors = ["Egor Larionov <egor.larionov@gmail.com>"]
 edition = "2018"
 
+[lib]
+name = "implicits"
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
+implicits = { path = "../implicits" }
+reinterpret = "0.1"
+geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io"] }
+
+[build-dependencies]
+cbindgen = "0.6"
