Refactor and complete contact jacobian

--- a/implicits/Cargo.toml
+++ b/implicits/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 rayon = "1.0"
 nalgebra = "0.16"
 hrbf = { git = "ssh://git@gitlab.com/elrnv/dyn-hrbf.git" }
-geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io"] }
+geo = { package = "geometry", git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io"] }
 spade = "1.5"
 autodiff = { git = "ssh://git@github.com/elrnv/autodiff.git" }
 reinterpret = "0.1"
