--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -5,15 +5,16 @@ authors = ["Egor Larionov <egor.larionov@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-nalgebra = "0.16"
+na = { package = "nalgebra", version = "0.16" }
 ipopt = { git = "ssh://git@gitlab.com/elrnv/ipopt-rs.git" }
-geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io"] }
+geo = { package = "geometry", git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io"] }
 rayon = "1.0"
 reinterpret = "0.1"
 implicits = { path = "../implicits" }
 #unroll = { git = "ssh://git@gitlab.com/elrnv/unroll.git" }
 approx = "0.3"
 num-traits = "0.2"
+jemallocator = "*"
 
 [dev-dependencies]
 criterion = { version = "0.2" }
