[vtkio-hdk] Fixed CMakelists for linux

--- a/vtkio-hdk/hdk/CMakeLists.txt
+++ b/vtkio-hdk/hdk/CMakeLists.txt
@@ -33,7 +33,9 @@ find_package( hdkrs REQUIRED )
 find_package( Vtkio REQUIRED )
 find_package( Boost REQUIRED )
 
-find_library( MACOS_SECURITY Security )
+if(APPLE)
+    find_library( MACOS_SECURITY Security )
+endif()
 
 set( library_name vtkio )
 
