[softy] Generic energies + autodiff energy tests
This commit also fixed a bug with incorrect handling of momentum energy.

--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -19,6 +19,8 @@ jemallocator = "*"
 [dev-dependencies]
 criterion = { version = "0.2" }
 utils = { path = "../utils" }
+autodiff = "0.1"
+rand = "0.5"
 
 [features]
 unstable = ["criterion/real_blackbox"]
