--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -15,6 +15,7 @@ implicits = { path = "../implicits" }
 approx = "0.3"
 num-traits = "0.2"
 jemallocator = "*"
+image = "0.21" # For visualizing large sparse matrices
 
 [dev-dependencies]
 criterion = { version = "0.2" }
