--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -14,7 +14,7 @@ implicits = { path = "../implicits" }
 #unroll = { git = "ssh://git@gitlab.com/elrnv/unroll.git" }
 approx = "0.3"
 num-traits = "0.2"
-jemallocator = "*"
+jemallocator = "0.3"
 image = "0.21" # For visualizing large sparse matrices
 
 [dev-dependencies]
