Refactor all hdk C apis
After realizing that name collisions will occur with unmangled exported
symbols, all the raw C API calls from Rust code have been properly
prefixed (namespaced). This additionally helped distinguish between
types used solely for the C interface and corresponding internal types.

--- a/softy-hdk/Cargo.toml
+++ b/softy-hdk/Cargo.toml
@@ -9,7 +9,7 @@ name = "softyhdk"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git" }
+geo = { package = "geometry", git = "ssh://git@gitlab.com/elrnv/geometry.git" }
 softy = { path = "../softy" }
 libc = "*"
 hdkrs = { path = "../hdkrs" }
