--- a/implicits-hdk/hdk/CMakeLists.txt
+++ b/implicits-hdk/hdk/CMakeLists.txt
@@ -50,8 +50,9 @@ add_library( ${library_name} SHARED
 
 # Link against the Houdini libraries, and add required include directories and
 # compile definitions.
-target_link_libraries( ${library_name} Houdini ${Implicits_LIBRARIES} ${MACOS_SECURITY}
-    ${Boost_LIBRARIES})
+target_link_libraries( ${library_name}
+    PUBLIC Houdini ${MACOS_SECURITY}
+    PRIVATE ${Implicits_LIBRARIES} ${Boost_LIBRARIES})
 
 # Include ${CMAKE_CURRENT_BINARY_DIR} for the generated header.
 target_include_directories( ${library_name} PRIVATE
