--- a/softy-hdk/hdk/CMakeLists.txt
+++ b/softy-hdk/hdk/CMakeLists.txt
@@ -49,7 +49,9 @@ add_library( ${library_name} SHARED
 
 # Link against the Houdini libraries, and add required include directories and
 # compile definitions.
-target_link_libraries( ${library_name} Houdini ${Softy_LIBRARIES} ${MACOS_SECURITY} )
+target_link_libraries( ${library_name}
+    PUBLIC Houdini ${MACOS_SECURITY}
+    PRIVATE ${Softy_LIBRARIES} )
 
 # Include ${CMAKE_CURRENT_BINARY_DIR} for the generated header.
 target_include_directories( ${library_name} PRIVATE
