--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
     "softy",
     "softy-hdk",
     "implicits",
-    "implicits-c",
+    "cimplicits",
     "implicits-hdk",
     "vtkio-hdk",
 ]
