[utils] Add missing dependencies

--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2018"
 
 [dependencies]
 geo = { package = "geometry", git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io"] }
+rand = "0.5"
+
+[dev-dependencies]
+approx = "0.3"
