--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -17,6 +17,7 @@ num-traits = "0.2"
 jemallocator = "0.3"
 image = "0.21" # For visualizing large sparse matrices
 utils = { path = "../utils" }
+is_sorted = "0.1"
 
 [dev-dependencies]
 criterion = { version = "0.2" }
