--- a/implicits/Cargo.toml
+++ b/implicits/Cargo.toml
@@ -14,11 +14,12 @@ autodiff = { git = "ssh://git@github.com/elrnv/autodiff.git" }
 reinterpret = "0.1"
 num-traits = "0.2"
 utils = { path = "../utils" }
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
 approx = "0.3"
 rand = "0.5"
+serde_json = "1.0"
 
 [features]
 unstable = []
