--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -18,6 +18,7 @@ jemallocator = "0.3"
 image = "0.21" # For visualizing large sparse matrices
 utils = { path = "../utils" }
 is_sorted = "0.1"
+af = { package = "arrayfire", version = "3.6" }
 
 [dev-dependencies]
 criterion = { version = "0.2" }
