--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -20,7 +20,7 @@ utils = { path = "../utils" }
 is_sorted = "0.1"
 sprs = "0.6.4"
 ndarray = "0.12.1"
-af = { package = "arrayfire", path = "../arrayfire" }
+af = { package = "arrayfire", git = "ssh://git@github.com/elrnv/arrayfire-rust.git" }
 
 [dev-dependencies]
 criterion = { version = "0.2" }
