Remove generating rpaths

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ members = [
 
 [profile.release]
 debug = false # Change this to true to enable debug symbols in release mode
-rpath = true
+rpath = false
