[utils] Added implementation for UniformSet

--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 [dependencies]
 geo = { package = "geometry", git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io"] }
 rand = "0.5"
+cell = "0.1"
+reinterpret = "0.1"
 
 [dev-dependencies]
 approx = "0.3"
