--- a/cimplicits/Cargo.toml
+++ b/cimplicits/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 implicits = { path = "../implicits" }
 reinterpret = "0.1"
-geometry = { git = "ssh://git@gitlab.com/elrnv/geometry.git", features = ["io"] }
+geometry = { git = "https://gitlab.com/elrnv/geometry.git", features = ["io"] }
 
 [build-dependencies]
 cbindgen = "0.6"
