--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -9,6 +9,10 @@ geo = { package = "geometry", git = "https://gitlab.com/elrnv/geometry.git", fea
 rand = "0.5"
 typenum = "1.10"
 reinterpret = "0.2"
+sprs = { version = "0.6.4", optional = true }
 
 [dev-dependencies]
 approx = "0.3"
+
+[features]
+default = ["sprs"]
