--- a/softy/Cargo.toml
+++ b/softy/Cargo.toml
@@ -19,6 +19,7 @@ image = "0.21" # For visualizing large sparse matrices
 utils = { path = "../utils" }
 is_sorted = "0.1"
 sprs = "0.6.4"
+sprs-ldl = "0.4.1"
 ndarray = "0.12.1"
 af = { package = "arrayfire", git = "https://github.com/elrnv/arrayfire-rust.git", optional = true }
 
