--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -3,6 +3,7 @@ name = "utils"
 version = "0.1.0"
 authors = ["Egor Larionov <egor.larionov@gmail.com>"]
 edition = "2018"
+license = "MPL-2.0"
 
 [dependencies]
 geo = { package = "geometry", git = "https://gitlab.com/elrnv/geometry.git", features = ["io"] }
