--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -12,6 +12,7 @@ typenum = "1.10"
 reinterpret = "0.2"
 sprs = { version = "0.6.4", optional = true }
 image = "0.22"
+unroll = "0.1"
 
 [dev-dependencies]
 approx = "0.3"
