--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -14,6 +14,7 @@ sprs = { version = "0.6.4", optional = true }
 image = "0.22"
 unroll = "0.1"
 num-traits = "0.2"
+rayon = "1.2"
 
 [dev-dependencies]
 approx = "0.3"
