--- a/implicits/Cargo.toml
+++ b/implicits/Cargo.toml
@@ -17,11 +17,17 @@ num-traits = "0.2"
 utils = { path = "../utils" }
 serde = { version = "1.0", features = ["derive"] }
 snafu = "0.5"
+arrayvec = "0.5"
 
 [dev-dependencies]
 approx = "0.3"
 rand = "0.5"
 serde_json = "1.0"
+criterion = "0.3"
 
 [features]
-unstable = []
+unstable = ["criterion/real_blackbox"]
+
+[[bench]]
+name = "potential"
+harness = false
