--- a/implicits/Cargo.toml
+++ b/implicits/Cargo.toml
@@ -10,12 +10,12 @@ rayon = "1.2"
 na = { package = "nalgebra", version = "0.18" }
 hrbf = "0.2"
 geo = { package = "geometry", git = "https://gitlab.com/elrnv/geometry.git", features = ["io", "serde_all"] }
-rstar = { version = "0.5", features = ["serde"] }
+rstar = { version = "0.5" }
 autodiff = { git = "https://github.com/elrnv/autodiff.git" }
 reinterpret = "0.1"
 num-traits = "0.2"
 utils = { path = "../utils" }
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"], optional = true }
 snafu = "0.5"
 arrayvec = "0.5"
 
@@ -27,6 +27,7 @@ criterion = "0.3"
 
 [features]
 unstable = ["criterion/real_blackbox"]
+serde_all = ["serde", "rstar/serde"]
 
 [[bench]]
 name = "potential"
