--- a/cimplicits/Cargo.toml
+++ b/cimplicits/Cargo.toml
@@ -10,8 +10,8 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 implicits = { path = "../implicits" }
-reinterpret = "0.1"
-geometry = { git = "https://gitlab.com/elrnv/geometry.git", features = ["io"] }
+reinterpret = "0.2"
+gut = { version = "0.2", features = ["io"] }
 
 [build-dependencies]
 cbindgen = "0.6"
