--- a/implicits-hdk/Cargo.toml
+++ b/implicits-hdk/Cargo.toml
@@ -9,7 +9,7 @@ name = "implicitshdk"
 crate-type = ["staticlib", "rlib"]
 
 [dependencies]
-geo = { package = "geometry", git = "https://gitlab.com/elrnv/geometry.git" }
+geo = { package = "gut", version = "0.2" }
 implicits = { path = "../implicits" }
 hdkrs = { path = "../hdkrs" }
 
