--- a/implicits/Cargo.toml
+++ b/implicits/Cargo.toml
@@ -9,9 +9,9 @@ license = "MPL-2.0"
 rayon = "1.2"
 na = { package = "nalgebra", version = "0.18" }
 hrbf = "0.2"
-geo = { package = "geometry", git = "https://gitlab.com/elrnv/geometry.git", features = ["io", "serde_all"] }
+geo = { package = "gut", version = "0.2", features = ["io", "serde_all"] }
 rstar = { version = "0.5" }
-autodiff = { git = "https://github.com/elrnv/autodiff.git" }
+autodiff = "0.1"
 reinterpret = "0.1"
 num-traits = "0.2"
 utils = { path = "../utils" }
