[utils] Inlining for one liners in array_math
Refactored benches to use the new group format. Added a trace benchmark
too.

--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -35,6 +35,9 @@ harness = false
 name = "norm_squared"
 harness = false
 [[bench]]
+name = "trace"
+harness = false
+[[bench]]
 name = "determinant"
 harness = false
 [[bench]]
