--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -15,6 +15,7 @@ image = "0.22"
 unroll = "0.1"
 num-traits = "0.2"
 rayon = "1.2"
+autodiff = { version = "0.1", optional = true }
 
 [dev-dependencies]
 approx = "0.3"
